--- a/main.ipynb
+++ b/main.ipynb
@@ -4,20 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DMP"
+    "# Using LLMs to Generate NIH Data Management Plans (DMPs)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Import Required Libraries\n",
-    "We begin by importing the essential Python libraries used throughout this script:"
+    "## Step 1: Import Required Libraries\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +26,6 @@
     "import pandas as pd  # Handle structured data\n",
     "import os  # File handling\n",
     "from dotenv import load_dotenv  # Load API keys securely\n",
-    "# Load environment variables (ensure API keys are stored in a .env file)\n",
     "load_dotenv()\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
     "# Set API keys\n",
@@ -82,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,15 +98,15 @@
     "    Returns:\n",
     "        str: Response from the OpenAI model.\n",
     "    \"\"\"\n",
-    "    client = openai.OpenAI()  # Create a client instance\n",
+    "    client = openai.OpenAI()  \n",
     "\n",
     "    response = client.chat.completions.create(\n",
     "        model=model,\n",
     "        messages=[{\"role\": \"user\", \"content\": query}],\n",
-    "        temperature=0.7  # Controls creativity level\n",
+    "        temperature=0.7  \n",
     "    )\n",
     "\n",
-    "    return response.choices[0].message.content  # Extract and return the response"
+    "    return response.choices[0].message.content  "
    ]
   },
   {
@@ -131,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,16 +143,16 @@
     "        filename (str): Name of the Markdown file.\n",
     "        response (str): The text to be saved.\n",
     "    \"\"\"\n",
-    "    create_folder(folderpath)  # Ensure the folder exists\n",
-    "    filepath = os.path.join(folderpath, filename)  # Full file path\n",
+    "    create_folder(folderpath)  \n",
+    "    filepath = os.path.join(folderpath, filename) \n",
     "    with open(filepath, \"w\", encoding=\"utf-8\") as f:\n",
-    "        f.write(response)  # Write response to file\n",
-    "    print(filepath, \"saved\")  # Confirmation message\n"
+    "        f.write(response)  \n",
+    "    print(filepath, \"saved\")  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,10 +166,10 @@
     "        docx_folderpath (str): Path where the DOCX file will be saved.\n",
     "        docx_filename (str): Name of the DOCX file.\n",
     "    \"\"\"\n",
-    "    create_folder(docx_folderpath)  # Ensure the output folder exists\n",
-    "    docx_filepath = os.path.join(docx_folderpath, docx_filename)  # Full output file path\n",
-    "    pypandoc.convert_file(md_filepath, 'docx', outputfile=docx_filepath)  # Convert Markdown to DOCX\n",
-    "    print(docx_filepath, \"saved\")  # Confirmation message"
+    "    create_folder(docx_folderpath)  \n",
+    "    docx_filepath = os.path.join(docx_folderpath, docx_filename)  \n",
+    "    pypandoc.convert_file(md_filepath, 'docx', outputfile=docx_filepath)  \n",
+    "    print(docx_filepath, \"saved\")  "
    ]
   },
   {
@@ -279,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +291,7 @@
     "from docx import Document\n",
     "ollama_models = [\"llama3.3\"]\n",
     "openai_models = [\"gpt-4.1\"]\n",
-    "#gemini_models = [\"gemini-1.5-pro-latest\"]\n",
+    "\n",
     "\n",
     "# Initial query template for NIH Data Management and Sharing Plan (DMP)\n",
     "query_initiate = \"You are an expert biomedical grant writer and data steward. Create a Data Management and Sharing Plan (DMSP) for a grant proposal being submitted to the National Institutes of Health (NIH), \"\n",
@@ -303,7 +301,7 @@
     "\n",
     "# Function to generate query from a row\n",
     "def generate_query(row):\n",
-    "    #query_dmp = f\"For {row['DMP sample']} from this particular link {row['Link']}.\"\n",
+    "\n",
     "    query_funding_agency = f\"Specifically targeting the {row['institute']}.\"\n",
     "    query_Element1_A = (\n",
     "        f\"Here are the details about the data to be collected:\\n\"\n",
@@ -332,14 +330,12 @@
     "\n",
     "# Apply the function to each row and store in a new column\n",
     "df[\"Generated Query\"] = df.apply(generate_query, axis=1)\n",
-    "\n",
-    "# (Optional) Save to a CSV or text file for inspection or later use\n",
     "df.to_csv(\"outputs/with_generated_queries.csv\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -461,24 +457,18 @@
     "import pandas as pd\n",
     "from docx import Document\n",
     "\n",
-    "# ------------------------------------------------------------\n",
-    "# Utility: sanitize filenames\n",
-    "# ------------------------------------------------------------\n",
+    "# Utility\n",
     "def clean_filename(name: str) -> str:\n",
     "    return re.sub(r'[\\\\/*?:\"<>|]', \"_\", str(name).strip())\n",
     "\n",
-    "# ------------------------------------------------------------\n",
-    "# Utility: save query to Word\n",
-    "# ------------------------------------------------------------\n",
+    "\n",
     "def save_query_doc(folderpath: str, name: str, query: str) -> None:\n",
     "    doc = Document()\n",
     "    doc.add_heading(\"Generated DMP Query\", level=1)\n",
     "    doc.add_paragraph(query)\n",
     "    doc.save(os.path.join(folderpath, f\"{name}_query.docx\"))\n",
     "\n",
-    "# ------------------------------------------------------------\n",
-    "# Utility: process models (one folder per DMP)\n",
-    "# ------------------------------------------------------------\n",
+    "\n",
     "def process_models(\n",
     "    models,\n",
     "    query_func,\n",
@@ -506,9 +496,9 @@
     "            filename_docx\n",
     "        )\n",
     "\n",
-    "# ============================================================\n",
+    "\n",
     "# Single Run Generation\n",
-    "# ============================================================\n",
+    "\n",
     "print(\" Single run started...\")\n",
     "\n",
     "# Output base folders (single run)\n",
