--- a/main.ipynb
+++ b/main.ipynb
@@ -20,17 +20,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ollama  # Local LLMs like Llama3 \n",
-    "import openai  # GPT-4 API\n",
-    "import pypandoc  # Convert Markdown to DOCX\n",
-    "import pandas as pd  # Handle structured data\n",
-    "import os  # File handling\n",
-    "from dotenv import load_dotenv  # Load API keys securely\n",
+    "import ollama  \n",
+    "import openai  \n",
+    "import pypandoc  \n",
+    "import pandas as pd  \n",
+    "import os  \n",
+    "import re\n",
+    "import pandas as pd\n",
+    "from docx import Document\n",
+    "from dotenv import load_dotenv  #\n",
     "load_dotenv()\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "# Set API keys\n",
     "openai.api_key = OPENAI_API_KEY\n",
-    "\n"
+    "ollama_models = [\"llama3.3\"]\n",
+    "openai_models = [\"gpt-4.1\"]"
    ]
   },
   {
@@ -187,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -202,8 +205,6 @@
    "source": [
     "\n",
     "# Define file paths\n",
-    "import os\n",
-    "import pandas as pd\n",
     "excel_path = \"inputs/inputs.xlsx\"\n",
     "template_path = \"inputs/dmp-template.md\"\n",
     "\n",
@@ -281,17 +282,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# List of LLM models to be used (Ollama & OpenAI)\n",
-    "import ollama\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import re\n",
-    "from docx import Document\n",
-    "ollama_models = [\"llama3.3\"]\n",
-    "openai_models = [\"gpt-4.1\"]\n",
-    "\n",
     "\n",
     "# Initial query template for NIH Data Management and Sharing Plan (DMP)\n",
     "query_initiate = \"You are an expert biomedical grant writer and data steward. Create a Data Management and Sharing Plan (DMSP) for a grant proposal being submitted to the National Institutes of Health (NIH), \"\n",
@@ -452,10 +442,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import re\n",
-    "import pandas as pd\n",
-    "from docx import Document\n",
     "\n",
     "# Utility\n",
     "def clean_filename(name: str) -> str:\n",
